--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "files.associations": {
     "string.h": "c",
-    "stdlib.h": "c"
+    "stdlib.h": "c",
+    "locale": "c",
+    "string": "c"
   }
 }
